2013-10-17  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/triconncomp.m: (0.1.0)

	- TRICONNCOMP  Find connected components in mesh.

2013-10-16  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/remove_vertex_from_tri.m: (0.1.0)
	* Add matlab/test/test_remove_vertex_from_tri.m: (0.1.0)

	- REMOVE_VERTEX_FROM_TRI Remove vertices from a triangular mesh.

	* Rename matlab/ManifoldToolbox/addpoint2tri.m as
	matlab/ManifoldToolbox/add_vertex_to_tri.m: (0.2.0)

	* Rename matlab/test/test_addpoint2tri.m as
	matlab/test/test_add_vertex_to_tri.m: (0.2.0)

2013-10-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/PolyhedronBuilder.h: (0.1.1)

	- Fix bug. If a facet creates a non-manifold polyhedron,
	builder.end_surface() with make Matlab throw a segfault.

2013-10-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.6.2)

	- Using the default directions (the cartesian axes) for the rays
	in cgal_insurftri() causes similar problems to using
	itk_tri_rasterization().

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.6.1)

	- Fix bug. Remove debugging code.

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.6.0)

	- As using itk_tri_rasterization() is proving quite unreliable, we
	are allowing two syntaxes: One that uses simply cgal_insurftri(),
	even if it's slower, and an "unsafe" mode that uses
	itk_tri_rasterization() followed by dilation and then checking
	with cgal_insurftri().

2013-10-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.5.0)

	- Fix bug. Even overlapping results from itk_tri_rasterization()
	in 3 orientations miss voxels within the mesh. Add a correction
	stage, where we dilate the segmentation, fill holes, and then
	check the extra voxels with cgal_insurftri().

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.4.3)

	- Fix bug. itk_tri_rasterization() can miss quite a bit of voxels